# tenant-emit

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  clippy.toml  deny.toml  package-lock.json  package.json  spec-spine.toml
.claude/agents/: architect.md  explorer.md  implementer.md  reviewer.md
.claude/rules/: governed-artifact-reads.md
.claude/skills/code-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/ship/: SKILL.md
.derived/codebase-index/by-package/: tenant-emit-cli.json  tenant-emit-core.json  tenant-emit-repo.json  tenant-emit-types.json  tenant-emit.json
.derived/codebase-index/by-spec/: 000-tenant-emit-bootstrap.json  001-certificate-emit-core.json  002-distribution.json
.derived/spec-registry/by-spec/: 000-tenant-emit-bootstrap.json  001-certificate-emit-core.json  002-distribution.json
.githooks/: enable-merge-driver.sh  merge-derived-index.sh
.github/workflows/: ai-pr-review.yml  ci.yml  deploy-docs.yml  determinism.yml  release.yml
crates/tenant-emit-cli/: Cargo.toml
crates/tenant-emit-cli/src/: main.rs
crates/tenant-emit-cli/tests/: tenant_emission_integration.rs
crates/tenant-emit-core/: Cargo.toml
crates/tenant-emit-core/src/: certificate.rs  lib.rs
crates/tenant-emit-types/: Cargo.toml
crates/tenant-emit-types/src/: build_spec.rs  certificate.rs  inter_stage_manifest.rs  lib.rs  pipeline_state.rs
npm/: README.md  package.json
npm/lib/: platform.js
npm/scripts/: generate-platform-packages.js  smoke-test.sh
npm/test/: platform.test.js
py/: README.md  pyproject.toml
py/scripts/: generate_wheels.py  smoke_test.sh
py/src/tenant_emit/: __init__.py  _refuse.py  platform_map.py
py/test/: test_platform_map.py
specs/000-tenant-emit-bootstrap/: spec.md
specs/001-certificate-emit-core/: spec.md
specs/002-distribution/: spec.md
website/: README.md  docusaurus.config.ts  sidebars.ts
website/docs/: cli-reference.md  corpus-binding-advanced.md
website/docs/architecture/: certificate-json-shape.md  determinism.md  emit-only-design.md  extraction-and-relicensing.md
website/docs/core-concepts/: corpus-binding.md  emit-vs-verify.md  governance-certificate.md  run-directory.md  signer-and-identity.md
website/docs/development/: build-from-source.md  contributing.md  self-governance.md  testing.md
website/docs/getting-started/: installation.md  key-custody.md  quickstart.md
website/docs/integration/: business-docs.md  custom-stages.md  python.md  rust.md  typescript-js.md
website/docs/release/: npm-resolution.md  overview.md  pypi-wheels.md  supply-chain-artifacts.md
website/src/pages/: index.module.css  index.tsx
