[package]
name = "tenant-emit-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "tenant-emit: the emit engine (certificate builder, signing-key resolution, run-dir scan, hashing/signing, persistence)."

[dependencies]
tenant-emit-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
chrono.workspace = true
getrandom.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[package.metadata.tenant-emit]
spec = "000-tenant-emit-bootstrap"
