[package]
name = "tenant-emit-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "tenant-emit: the emit-surface DTOs (governance certificate, signer, inter-stage manifest, pipeline state)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[package.metadata.tenant-emit]
spec = "000-tenant-emit-bootstrap"
